feat: new items and menu added

--- a/src/scss/nullstyle.scss
+++ b/src/scss/nullstyle.scss
@@ -12,3 +12,4 @@ img{vertical-align: middle;}
 h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: inherit;}
 .wrapper{min-height: 100%;overflow: hidden;display: flex;flex-direction: column;}
 ._container{max-width: 1152px;margin: 0 auto;box-sizing: border-box}
+.page{flex: 1 1;}
