--- a/src/index.css
+++ b/src/index.css
@@ -73,8 +73,59 @@ h1, h2, h3, h4, h5, h6 {
           box-sizing: border-box;
 }
 
+.page {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1;
+          flex: 1 1;
+}
+
 .active {
   color: #FF583E !important;
+}
+
+.green {
+  border: 1px solid #254F4C;
+  background-color: #254F4C;
+  color: #fff !important;
+}
+
+.white {
+  margin-top: 94px;
+  color: #1D3130 !important;
+  background-color: #fff;
+  -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.btn {
+  border-radius: 40px;
+  color: #fff;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 21px;
+  text-transform: uppercase;
+  padding: 12px 56px;
+}
+.btn svg {
+  margin-left: 7px;
+}
+
+.orange {
+  border: 1px solid #FF583E;
+  background-color: #FF583E;
+}
+.orange:hover {
+  color: #FF583E;
+  background-color: #fff;
+}
+
+.gr {
+  border: 1px solid #254F4C;
+  background-color: #254F4C;
+}
+.gr:hover {
+  color: #254F4C;
+  background-color: #fff;
 }
 
 .header__container {
@@ -173,4 +224,165 @@ h1, h2, h3, h4, h5, h6 {
 }
 .header__container .header__basket .basket__button img {
   margin-right: 8px;
+}
+
+.main__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-bottom: 33px;
+}
+.main__container .main__content .main__title {
+  width: 403px;
+  font-size: 36px;
+  font-weight: 900;
+  line-height: 42px;
+  color: #254F4C;
+}
+.main__container .main__content .main__content {
+  margin: 16px 0;
+  width: 416px;
+  line-height: 24px;
+  color: #1D3130;
+}
+.main__container .main__images {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 735px;
+}
+.main__container .main__images .main__images__burger {
+  z-index: 5;
+  position: relative;
+  left: 40px;
+}
+.main__container .main__images .main__images__cola {
+  z-index: 4;
+  position: relative;
+  right: 65px;
+}
+
+.new__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  overflow: hidden;
+}
+.new__container .new__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 88px;
+}
+.new__container .new__content .new__block {
+  padding: 0 16px;
+  width: 264px;
+  background-color: #254F4C;
+  border-radius: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.new__container .new__content .new__block .new-block__img {
+  height: 100px;
+}
+.new__container .new__content .new__block .new-block__img img {
+  position: relative;
+  bottom: 45px;
+}
+.new__container .new__content .new__block .new-block__title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  color: #ffffff;
+  margin: 16px 0 8px 0;
+}
+.new__container .new__content .new__block .new-block__content {
+  font-size: 14px;
+  color: #fff;
+  text-align: center;
+}
+.new__container .new__content .new__block .new-block__price {
+  margin-top: 15px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  color: #fff;
+}
+
+.menu__container {
+  margin-top: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.menu__container .menu__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.menu__container .menu__content .menu__sort {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.menu__container .menu__content .menu__sort .menu__text {
+  width: 136px;
+  margin-right: 8px;
+  font-size: 14px;
+}
+.menu__container .menu__content .menu__sort .menu__select {
+  width: 160px;
+  padding: 12px 23px;
+}
+.menu__container .menu__content .menu__content__items {
+  height: 818px;
+  margin-top: 112px;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
