--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,6 +10,50 @@ $orangeColor: #FF583E;
   color: $orangeColor!important;
 }
 
+.green{
+  border: 1px solid $mainColor;
+  background-color: $mainColor;
+  color: #fff!important;
+}
+
+.white{
+  margin-top: 94px;
+  color: $mainTextColor!important;
+  background-color: #fff;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.btn{
+  border-radius: 40px;
+  color: #fff;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 21px;
+  text-transform: uppercase;
+  padding: 12px 56px;
+  & svg{
+    margin-left: 7px;
+  }
+}
+
+.orange{
+  border: 1px solid $orangeColor;
+  background-color: $orangeColor;
+  &:hover{
+    color: $orangeColor;
+    background-color: #fff;
+  }
+}
+
+.gr{
+  border: 1px solid $mainColor;
+  background-color: $mainColor;
+  &:hover{
+    color: $mainColor;
+    background-color: #fff;
+  }
+}
+
 .header__container{
   margin-top: 24px;
   height: 40px;
@@ -78,3 +122,121 @@ $orangeColor: #FF583E;
     }
   }
 }
+
+.main__container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 33px;
+  .main__content{
+    .main__title{
+      width: 403px;
+      font-size: 36px;
+      font-weight: 900;
+      line-height: 42px;
+      color: $mainColor;
+    }
+    .main__content{
+      margin: 16px 0;
+      width: 416px;
+      line-height: 24px;
+      color: $mainTextColor;
+    }
+  }
+  .main__images{
+    display: flex;
+    width: 735px;
+    .main__images__burger{
+      z-index: 5;
+      position: relative;
+      left: 40px;
+    }
+    .main__images__cola{
+      z-index: 4;
+      position: relative;
+      right: 65px;
+    }
+  }
+}
+
+.new__container{
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  .new__content{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 88px;
+    .new__block{
+      padding: 0 16px;
+      width: 264px;
+      background-color: $mainColor;
+      border-radius: 40px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      .new-block__img{
+        height: 100px;
+        & img{
+          position: relative;
+          bottom: 45px;
+        }
+      }
+      .new-block__title{
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 23px;
+        color: #ffffff;
+        margin: 16px 0 8px 0;
+      }
+      .new-block__content{
+        font-size: 14px;
+        color: #fff;
+        text-align: center;
+      }
+      .new-block__price{
+        margin-top: 15px;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 23px;
+        color: #fff;
+      }
+    }
+  }
+}
+
+.menu__container{
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  .menu__content{
+    display: flex;
+    flex-direction: column;
+    .menu__sort{
+      align-self: flex-end;
+      display: flex;
+      align-items: center;
+      .menu__text{
+        width: 136px;
+        margin-right: 8px;
+        font-size: 14px;
+      }
+      .menu__select{
+        width: 160px;
+        padding: 12px 23px;
+      }
+    }
+    .menu__content__items{
+      height: 818px;
+      margin-top: 112px;
+      flex-grow: 1;
+      display: flex;
+      flex-wrap: wrap;
+    }
+  }
+}
+
+
+
