--- a/src/index.css
+++ b/src/index.css
@@ -93,17 +93,6 @@ h1, h2, h3, h4, h5, h6 {
   margin-left: 0;
 }
 
-.white {
-  margin-top: 94px !important;
-  color: #1D3130 !important;
-  background-color: #fff;
-  -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-}
-.white:not(:nth-of-type(4n)) {
-  margin: 0 16px 0 16px;
-}
-
 .btn {
   border-radius: 40px;
   color: #fff;
@@ -135,6 +124,35 @@ h1, h2, h3, h4, h5, h6 {
   background-color: #fff;
 }
 
+.white {
+  margin-top: 94px !important;
+  color: #1D3130 !important;
+  background-color: #fff;
+  -webkit-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.white:not(:nth-of-type(4n)) {
+  margin: 0 16px 0 16px;
+}
+.white h5 {
+  color: #254F4C !important;
+}
+
+.wh {
+  margin-top: 43px;
+  padding: 12px 56px !important;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  background-color: white;
+  color: #FF583E !important;
+  border: 1px solid #FF583E;
+}
+.wh:hover {
+  background-color: #FF583E;
+  color: white !important;
+}
+
 .tl {
   color: #254F4C;
   font-weight: 900;
@@ -145,9 +163,11 @@ h1, h2, h3, h4, h5, h6 {
 .menu__link {
   color: #1D3130;
   line-height: 19px;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
 .menu__link:hover {
-  color: aquamarine;
+  opacity: 0.5;
 }
 
 .header__container {
@@ -201,6 +221,39 @@ h1, h2, h3, h4, h5, h6 {
       -ms-flex-align: center;
           align-items: center;
 }
+.header__container .header__menu .menu__list .menu__dropdown {
+  position: relative;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+.header__container .header__menu .menu__list .menu__dropdown img {
+  margin-left: 8px;
+}
+.header__container .header__menu .menu__list .menu__dropdown .dropdown__content {
+  position: absolute;
+  left: 0;
+  top: 100%;
+  display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border: 1px solid #C4C4C4;
+  border-radius: 0 20px 20px 20px;
+}
+.header__container .header__menu .menu__list .menu__dropdown .dropdown__content li {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  text-align: center;
+  width: 100px;
+  padding: 10px 0;
+}
+.header__container .header__menu .menu__list .menu__dropdown:hover > .dropdown__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
 .header__container .header__menu .menu__list .menu__item:not(:last-child) {
   margin-right: 60px;
 }
@@ -241,9 +294,9 @@ h1, h2, h3, h4, h5, h6 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -256,11 +309,14 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 42px;
   color: #254F4C;
 }
-.main__container .main__content .main__content {
+.main__container .main__content .main__text {
   margin: 16px 0;
   width: 416px;
   line-height: 24px;
   color: #1D3130;
+}
+.main__container .main__content .main__text .btn {
+  padding: 12px 35px 13px !important;
 }
 .main__container .main__images {
   display: -webkit-box;
@@ -317,25 +373,6 @@ h1, h2, h3, h4, h5, h6 {
   position: relative;
   bottom: 45px;
 }
-.new__container .new__content .new__block .new-block__title {
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 23px;
-  color: #ffffff;
-  margin: 16px 0 8px 0;
-}
-.new__container .new__content .new__block .new-block__content {
-  font-size: 14px;
-  color: #fff;
-  text-align: center;
-}
-.new__container .new__content .new__block .new-block__price {
-  margin-top: 15px;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 23px;
-  color: #fff;
-}
 
 .menu__container {
   margin-top: 50px;
@@ -376,8 +413,17 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 14px;
 }
 .menu__container .menu__content .menu__sort .menu__select {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border: 1px solid #C4C4C4;
   width: 160px;
   padding: 12px 23px;
+  background: url("./assets/icons/arSelectGr.svg") no-repeat right;
+  background-position-x: calc(100% - 25px);
+}
+.menu__container .menu__content .menu__sort .menu__select:hover, .menu__container .menu__content .menu__sort .menu__select:focus {
+  outline: none;
 }
 .menu__container .menu__content .menu__content__items {
   margin-top: 18px;
