--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -20,17 +20,7 @@ $orangeColor: #FF583E;
   }
 }
 
-.white{
-  margin-top: 94px!important;
-  color: $mainTextColor!important;
-  background-color: #fff;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  &:not(:nth-of-type(4n)){
-    margin: 0 16px 0 16px;
-  }
-}
-
-.btn{
+.btn {
   border-radius: 40px;
   color: #fff;
   font-weight: 700;
@@ -38,26 +28,53 @@ $orangeColor: #FF583E;
   line-height: 21px;
   text-transform: uppercase;
   padding: 12px 56px;
-  & svg{
+  & svg {
     margin-left: 7px;
   }
 }
 
-.orange{
-  border: 1px solid $orangeColor;
-  background-color: $orangeColor;
-  &:hover{
-    color: $orangeColor;
+
+.orange {
+  border: 1px solid #FF583E;
+  background-color: #FF583E;
+  &:hover {
+    color: #FF583E;
     background-color: #fff;
   }
 }
 
-.gr{
-  border: 1px solid $mainColor;
-  background-color: $mainColor;
-  &:hover{
-    color: $mainColor;
+.gr {
+  border: 1px solid #254F4C;
+  background-color: #254F4C;
+  &:hover {
+    color: #254F4C;
     background-color: #fff;
+  }
+}
+
+.white{
+  margin-top: 94px!important;
+  color: $mainTextColor!important;
+  background-color: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  &:not(:nth-of-type(4n)){
+    margin: 0 16px 0 16px;
+  }
+  & h5{
+    color: $mainColor!important;
+  }
+}
+
+.wh{
+  margin-top: 43px;
+  padding: 12px 56px!important;
+  align-self: center;
+  background-color: white;
+  color: $orangeColor!important;
+  border: 1px solid $orangeColor;
+  &:hover{
+    background-color: $orangeColor;
+    color: white!important;
   }
 }
 
@@ -71,8 +88,9 @@ $orangeColor: #FF583E;
 .menu__link{
   color: $mainTextColor;
   line-height: 19px;
+  transition: all 0.5s;
   &:hover{
-    color: $hoverColor;
+    opacity: 0.5;
   }
 }
 
@@ -104,6 +122,31 @@ $orangeColor: #FF583E;
       display: flex;
       flex-direction: row;
       align-items: center;
+      .menu__dropdown{
+        position: relative;
+        transition: all 0.5s;
+        & img{
+          margin-left: 8px;
+        }
+        .dropdown__content{
+          position: absolute;
+          left: 0;
+          top: 100%;
+          display: none;
+          flex-direction: column;
+          border: 1px solid #C4C4C4;
+          border-radius: 0 20px 20px 20px;
+          & li{
+            align-self: center;
+            text-align: center;
+            width: 100px;
+            padding: 10px 0;
+          }
+        }
+        &:hover > .dropdown__content{
+          display: flex;
+        }
+      }
       .menu__item{
         &:not(:last-child){
           margin-right: 60px;
@@ -139,7 +182,7 @@ $orangeColor: #FF583E;
 
 .main__container{
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   padding: 56px 0 33px 0;
   .main__content{
@@ -150,11 +193,14 @@ $orangeColor: #FF583E;
       line-height: 42px;
       color: $mainColor;
     }
-    .main__content{
+    .main__text{
       margin: 16px 0;
       width: 416px;
       line-height: 24px;
       color: $mainTextColor;
+      .btn{
+        padding: 12px 35px 13px!important;
+      }
     }
   }
   .main__images{
@@ -188,25 +234,6 @@ $orangeColor: #FF583E;
           bottom: 45px;
         }
       }
-      .new-block__title{
-        font-weight: 700;
-        font-size: 20px;
-        line-height: 23px;
-        color: #ffffff;
-        margin: 16px 0 8px 0;
-      }
-      .new-block__content{
-        font-size: 14px;
-        color: #fff;
-        text-align: center;
-      }
-      .new-block__price{
-        margin-top: 15px;
-        font-weight: 700;
-        font-size: 20px;
-        line-height: 23px;
-        color: #fff;
-      }
     }
   }
 }
@@ -230,8 +257,15 @@ $orangeColor: #FF583E;
         font-size: 14px;
       }
       .menu__select{
+        appearance: none;
+        border: 1px solid #C4C4C4;
         width: 160px;
         padding: 12px 23px;
+        background: url('./assets/icons/arSelectGr.svg') no-repeat right;
+        background-position-x: calc(100% - 25px);
+        &:hover,&:focus{
+          outline: none;
+        }
       }
     }
     .menu__content__items{
