--- a/src/index.css
+++ b/src/index.css
@@ -82,6 +82,9 @@ h1, h2, h3, h4, h5, h6 {
 .active {
   color: #FF583E !important;
 }
+.active:hover {
+  opacity: 1 !important;
+}
 
 .green {
   border: 1px solid #254F4C;
@@ -101,8 +104,11 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 21px;
   text-transform: uppercase;
   padding: 12px 56px;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
 .btn svg {
+  fill: #FF583E !important;
   margin-left: 7px;
 }
 
@@ -111,8 +117,7 @@ h1, h2, h3, h4, h5, h6 {
   background-color: #FF583E;
 }
 .orange:hover {
-  color: #FF583E;
-  background-color: #fff;
+  opacity: 0.8;
 }
 
 .gr {
@@ -120,8 +125,7 @@ h1, h2, h3, h4, h5, h6 {
   background-color: #254F4C;
 }
 .gr:hover {
-  color: #254F4C;
-  background-color: #fff;
+  opacity: 0.8;
 }
 
 .white {
@@ -192,6 +196,7 @@ h1, h2, h3, h4, h5, h6 {
 .header__container .header__logo .logo__img {
   width: 32px;
   margin-right: 8px;
+  fill: #246864;
 }
 .header__container .header__logo .logo__content {
   -ms-flex-item-align: center;
@@ -223,13 +228,16 @@ h1, h2, h3, h4, h5, h6 {
 }
 .header__container .header__menu .menu__list .menu__dropdown {
   position: relative;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
 }
 .header__container .header__menu .menu__list .menu__dropdown img {
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
   margin-left: 8px;
 }
 .header__container .header__menu .menu__list .menu__dropdown .dropdown__content {
+  background-color: white;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
   position: absolute;
   left: 0;
   top: 100%;
@@ -248,6 +256,12 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
   width: 100px;
   padding: 10px 0;
+}
+.header__container .header__menu .menu__list .menu__dropdown .dropdown__content li .dropdown__link:hover {
+  padding-bottom: 5px;
+  border-bottom: 2px solid #254F4C;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 .header__container .header__menu .menu__list .menu__dropdown:hover > .dropdown__content {
   display: -webkit-box;
@@ -274,6 +288,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .header__container .header__phone .phone__img {
   margin-right: 8px;
+  fill: #1D3130;
 }
 .header__container .header__basket {
   display: -webkit-box;
@@ -290,8 +305,14 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 23px;
   color: #FF583E;
 }
-.header__container .header__basket .basket__button img {
+.header__container .header__basket .basket__button svg {
+  fill: #1D3130;
   margin-right: 8px;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+.header__container .header__basket .basket__button:hover svg {
+  fill: red;
 }
 
 .main__container {
@@ -608,6 +629,9 @@ h1, h2, h3, h4, h5, h6 {
   display: -ms-flexbox;
   display: flex;
 }
+.footer .footer__container .footer__logo svg {
+  fill: white;
+}
 .footer .footer__container .footer__logo .logo__content {
   margin-left: 8px;
   color: white;
@@ -649,11 +673,13 @@ h1, h2, h3, h4, h5, h6 {
   color: white;
   line-height: 19px;
 }
+.footer .footer__container .footer__menu .menu__list .menu__item svg {
+  fill: white;
+  margin-right: 8px;
+  vertical-align: bottom;
+}
 .footer .footer__container .footer__menu .menu__list .menu__item:not(:last-child) {
   margin-right: 60px;
-}
-.footer .footer__container .footer__menu .menu__list .menu__item img {
-  margin-right: 8px;
 }
 .footer .footer__container .footer__menu .menu__list .menu__item .menu__link {
   color: white;
