--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -189,6 +189,7 @@ $orangeColor: #FF583E;
     align-items: center;
     .basket__button{
       width: 48px;
+      position: relative;
       background-color: transparent;
       font-size: 20px;
       line-height: 23px;
@@ -198,8 +199,64 @@ $orangeColor: #FF583E;
         margin-right: 8px;
         transition: all 0.5s;
       }
-      &:hover svg{
-        fill: red;
+
+      .button__inner{
+        width: 250px;
+        padding: 10px 10px 8px;
+        border: 1px solid #C4C4C4;
+        background-color: white;
+        position: absolute;
+        display: none;
+        flex-direction: column;
+        right: 25px;
+        top: auto;
+        border-radius: 20px 0 20px 20px;
+
+        .inner__title{
+          text-align: center;
+          font-size: 16px;
+          font-weight: 600;
+          color: #254F4C;
+        }
+
+        .inner__count{
+          text-align: center;
+          font-size: 14px;
+          color: #1D3130;
+        }
+
+        .inner__place{
+          border-top: 1px solid #1D3130;
+          padding: 5px 0;
+
+          .inner__item{
+            display: flex;
+            padding: 10px 0;
+            justify-content: space-between;
+            color: #254F4C;
+            font-size: 16px;
+            border-bottom: 1px solid #1D3130;
+
+            .inner__btn{
+              background-color: transparent;
+
+              &:hover svg{
+                fill: red;
+              }
+            }
+          }
+
+        }
+
+        .inner__link{
+          width: 100%;
+          padding: 6px 12px;
+          border-radius: 5px;
+          color: white;
+        }
+      }
+      &:hover .button__inner{
+        display: flex;
       }
     }
   }
