--- a/src/scss/nullstyle.scss
+++ b/src/scss/nullstyle.scss
@@ -7,9 +7,10 @@ input,button,textarea{font-family: inherit;}
 button{cursor: pointer;}
 a,a:visited{text-decoration: none;}
 a:hover{text-decoration: none;}
-ul li{list-style: none;}
+ul li{list-style: none; margin: 0; padding: 0}
+p{margin: 0}
 img{vertical-align: middle;}
-h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: inherit;}
-.wrapper{min-height: 100%;overflow: hidden;display: flex;flex-direction: column;}
+h1,h2,h3,h4,h5,h6{font-size: inherit; font-weight: inherit; margin: 0}
+.wrapper{min-height: 100%;overflow: hidden;display: flex;flex-direction: column; justify-content: center}
 ._container{max-width: 1160px;margin: 0 auto;padding: 0 15px; box-sizing: border-box}
 .page{flex: 1 1 auto;}
